2009-09-14  Cyril Robert <crobert@inverse.ca>

	* UI/Common/UIxPageFrame.m (commonLocalizableStrings): clabels are no longer
	necessary in popup windows.

2009-09-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SOGoRootPage.js (onLoginClick): avoid
	setting an empty string as value to "document.cookie" since this
	will actually create a cookie.

	* UI/MainUI/SOGoUserHomePage.m (-logoffAction): fixed a typo in
	the "cache-control" header.

	* Main/SOGo.m (-sessionIDFromRequest:): overriden method that
	returns nil to avoid any session cookie to be set by SOPE.

2009-09-11  Cyril Robert <crobert@inverse.ca>

	* UI/Contacts/UIxContactFoldersView.m (allContactSearchAction): Added 
	support for excludeLists, to prevent listing vList entries.

2009-09-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MainUI/SOGoUserHomePage.m (-logoffAction): adjusted to handle
	the case where then authenticator doesn't handle authentication
	cookies. In such cases, this method should theorically never be
	invoked though.

	* UI/Common/UIxPageFrame.m (-canLogoff): new bool accessor that
	returns whether the current authenticator handles user
	disconnection or not, in which case we hide the "logoff" link in
	the UIxPageFrame.

	* SoObjects/SOGo/SOGoCache.m (-registerUser:withName:): adjusted
	method to take an additional "userName" parameter in order to
	store users with the username used at login time rather than their
	user id. This is especially useful when using indirect binds.

	* SoObjects/SOGo/LDAPSource.m (-_qualifierForUIDFilter:): we
	include the bindFields in the request if they are specified in the
	configuration.

	* Main/SOGo.m (-authenticatorInContext:): we no return an instance
	of SOGoProxyAuthenticator if "SOGoTrustProxyAuthentication" is
	set in the configuration.

	* SoObjects/SOGo/SOGoProxyAuthenticator.[mh]: new class module
	that defines an authenticator that unconditionnaly trusts and
	handle authentication done proxy-side. SOGo uses that